objects/Questionnaire_Implementation__c.object
<CustomObject>
    <fields>
        <fullName>ALM_Tools__c</fullName>
        <label>ALM Tools Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Any_other_CI_CD_tools__c</fullName>
        <label>Any other CI/CD tools</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Average_turnaround_time_for__c</fullName>
        <inlineHelpText>What is the average turnaround time for successful deployment?</inlineHelpText>
        <label>Average TAT for Successful Deployment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Challenges__c</fullName>
        <label>Challenges</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Implementation_Questionnaires</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Version_Control_Tool_If_Exists__c</fullName>
        <label>Current Version Control Tool(If Exists)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data_Loader_Capabilities__c</fullName>
        <label>Data Loader Capabilities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deployment_User__c</fullName>
        <description>List of Users and roles participating in the release process [ Please provide uniform  corporate e-mail Ids for license activation ]</description>
        <label>Deployment User</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Developer_Changes_how_do_you_track__c</fullName>
        <inlineHelpText>How do you keep track of and/or manage developer’s changes?</inlineHelpText>
        <label>Developer Changes (how do you track ?)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Goals_with_Version_Control_Short_Long__c</fullName>
        <inlineHelpText>What are your short term / long-term goals with Version Control?</inlineHelpText>
        <label>Version Control Goals (Short/Long Term)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hours_of_effort__c</fullName>
        <label>Hours of effort</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_Often__c</fullName>
        <description>How often do you encounter errors?</description>
        <label>How often do you encounter errors?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_are_merge_conflicts_addressed__c</fullName>
        <inlineHelpText>How are merge conflicts addressed?</inlineHelpText>
        <label>How are merge conflicts addressed?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_are_metadata_components_being_dep__c</fullName>
        <inlineHelpText>How are metadata components being deployed currently?</inlineHelpText>
        <label>How are metadata components are deployed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Change Sets</fullName>
                </value>
                <value>
                    <fullName>Ant Scripts</fullName>
                </value>
                <value>
                    <fullName>CI Server (Jenkins, Bamboo, CircleCI etc.)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other (Text Field - mandatory if none of the above are selected)</fullName>
                    <isActive>false</isActive>
                    <label>Other (Text Field - mandatory if none of the above are selected)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_long_does_it_take_for_pre_post_de__c</fullName>
        <inlineHelpText>How long does it take for pre/post deployment steps?</inlineHelpText>
        <label>Time for pre/post deployment steps ?</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>How_often_Data_Loader__c</fullName>
        <inlineHelpText>How often do you do data loading ?</inlineHelpText>
        <label>How often do you do data loading ?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Long_Term_Goals__c</fullName>
        <label>Long Term Goals</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name_of_other_System__c</fullName>
        <inlineHelpText>Please specify the Version Control system used under Others</inlineHelpText>
        <label>Plz specify other (VC)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Sanbox_in_Release__c</fullName>
        <label>No.of Sanbox in Release</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_of_time_Developers__c</fullName>
        <inlineHelpText>How often do your developers overwrite code?</inlineHelpText>
        <label>No of time Developers overwrite code ?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_time__c</fullName>
        <inlineHelpText>How often do you commit changes to version control?</inlineHelpText>
        <label>Changes committed to Version Control?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Admins__c</fullName>
        <label>Number of Admins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Developers__c</fullName>
        <label>Number of Developers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Primary_SI_Partners__c</fullName>
        <label>Number of Primary SI Partners</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Release_Managers_Architect__c</fullName>
        <label>Number of Release Managers/Architect</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpportunityAcc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>ImplementationQuestionnaire</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plz_specify_other_ALM__c</fullName>
        <inlineHelpText>Please specify the Project Management used under Others</inlineHelpText>
        <label>Plz specify other (ALM)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plz_specify_other_Automation_Tool__c</fullName>
        <label>Plz specify other Automation Tool</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Plz_specify_other_Metadata_components__c</fullName>
        <inlineHelpText>Please specify how metadata components being deployed currently if not mentioned above ?</inlineHelpText>
        <label>Plz specify other (Metadata components)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plz_specify_others__c</fullName>
        <inlineHelpText>Who are your primary SI Partners (if any)?</inlineHelpText>
        <label>Plz specify other (SI Partners)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Duration__c</fullName>
        <label>Release Duration</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Select_use_VC__c</fullName>
        <label>Select use cases evaluate_VC</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Set up Production Baseline</fullName>
                </value>
                <value>
                    <fullName>Check-in Code/Declarative Changes to Version Control</fullName>
                </value>
                <value>
                    <fullName>Integrate work streams for GIT (Merge complete branches)</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Select_use__c</fullName>
        <label>Select use cases you&apos;d like to evaluate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Setting up Production Baseline</fullName>
                </value>
                <value>
                    <fullName>Check-in Code/Declarative Changes to Version Control</fullName>
                </value>
                <value>
                    <fullName>Integrate work streams for GIT (Merge complete branches)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Select_use_cases_for_Deployment__c</fullName>
        <inlineHelpText>Select use cases that you wish to evaluate for Deployment</inlineHelpText>
        <label>Select use cases to evaluate_Deployment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Automated Deployments into Target Orgs</fullName>
                </value>
                <value>
                    <fullName>Selectively deploy metadata into Orgs</fullName>
                </value>
                <value>
                    <fullName>Synchronize Orgs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Select_use_cases_for__c</fullName>
        <inlineHelpText>Select use cases that you wish to evaluate</inlineHelpText>
        <label>Select use cases to evaluate ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Automated Deployments into Target Orgs</fullName>
                </value>
                <value>
                    <fullName>Selectively deploy metadata into Orgs</fullName>
                </value>
                <value>
                    <fullName>Synchronize Orgs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Select_use_cases_to_evaluate_Dataloader__c</fullName>
        <inlineHelpText>Select use cases that you wish to evaluate Dataloader</inlineHelpText>
        <label>Select use cases to evaluate_Dataloader</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Migration of parent/child dependencies w/ filters</fullName>
                </value>
                <value>
                    <fullName>Incremental migration and data masking</fullName>
                </value>
                <value>
                    <fullName>Scheduling jobs and run as post-deployment activity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Select_use_cases_to_evaluate__c</fullName>
        <inlineHelpText>Select use cases that you wish to evaluate:</inlineHelpText>
        <label>Select use cases to evaluate ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Migration of parent/child dependencies w/ filters</fullName>
                </value>
                <value>
                    <fullName>Incremental migration and data masking</fullName>
                </value>
                <value>
                    <fullName>Scheduling jobs and run as post-deployment activity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Short_Long_Term_goals_with_Data_Loader__c</fullName>
        <inlineHelpText>What are your short term / long-term goals with Data loader Pro?</inlineHelpText>
        <label>Data Loader Pro - Short/ Long Term Goal?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Short_Long_Term_goals_with_Deployments__c</fullName>
        <inlineHelpText>What are your short term / long-term goals with Deployments?</inlineHelpText>
        <label>Short/ Long Term goals with Deployments?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Short_Term_Goals_with_current_RLM__c</fullName>
        <label>Short Term Goals with current RLM</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Size_of_Sanboxes__c</fullName>
        <description>Number and Size of the Sandboxes [ Typically, the number of metadata components / size of package , Data load size and frequency ] that you will use in trial period</description>
        <label>Size of Sanboxes</label>
        <length>25000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Text_Automation_Details__c</fullName>
        <label>Test Automation Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Time_taken_for__c</fullName>
        <inlineHelpText>How much time does it take for a production deployment?</inlineHelpText>
        <label>Time taken for production deployment ?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_taken_for_commits_mer__c</fullName>
        <inlineHelpText>How long does it take for commits/merges?</inlineHelpText>
        <label>Time taken for commits/merges ?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Typically_how_many_records_do_you_mi__c</fullName>
        <inlineHelpText>Typically, how many records do you migrate per data load?</inlineHelpText>
        <label>No. records do you migrate per data load</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verison_Control__c</fullName>
        <label>Verison Control</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Version Control Used</fullName>
                </value>
                <value>
                    <fullName>Version Control Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Version_Control__c</fullName>
        <label>Version Control</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Used</fullName>
                </value>
                <value>
                    <fullName>Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_are_the_pain_points_during_the_d__c</fullName>
        <inlineHelpText>What are the pain points during the deployment process?</inlineHelpText>
        <label>Pain point during Deployment process ?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_does_your_current_release_process__c</fullName>
        <inlineHelpText>What does your current release process look like? Please attach the files</inlineHelpText>
        <label>What does your current release process</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>What_is_the_current_team_structure_w__c</fullName>
        <label>Current team structure w/  their roles</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>#Developers</fullName>
                </value>
                <value>
                    <fullName>#Admins</fullName>
                </value>
                <value>
                    <fullName>#Release Managers/Architects</fullName>
                </value>
                <value>
                    <fullName>Who are your primary SI Partners (if any)?</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_is_the_plan_for_code_backup__c</fullName>
        <inlineHelpText>What is the plan for code backup?</inlineHelpText>
        <label>What is the plan for code backup?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_kind_of_testing_do_you_perform__c</fullName>
        <label>What kind of testing do you perform?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apex only</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Automation</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <isActive>false</isActive>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_tools_are_you_using__c</fullName>
        <inlineHelpText>Mandatory if none of the above is selected</inlineHelpText>
        <label>What tools are you using in Automation ?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1_Any_ETL_tool_currently_being_used__c</fullName>
        <inlineHelpText>Any ETL tool currently being used?</inlineHelpText>
        <label>Any ETL tool currently being used?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1_How_do_you_keep_track_of_and_or_manag__c</fullName>
        <inlineHelpText>How do you keep track of and/or manage developer’s changes? *</inlineHelpText>
        <label>If Version Control is not used</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1_Which_Version_Control_System_is_used__c</fullName>
        <label>Which Version Control System is used ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GIT</fullName>
                </value>
                <value>
                    <fullName>SVN</fullName>
                </value>
                <value>
                    <fullName>TFS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X2_Which_tool_is_used_for_Project_Manage__c</fullName>
        <inlineHelpText>Which tool is used for Project Management (ALM)?</inlineHelpText>
        <label>Which tool is used for ALM ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>JIRA</fullName>
                </value>
                <value>
                    <fullName>Rally</fullName>
                </value>
                <value>
                    <fullName>HP ALM</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>a_What_tools_are_you_using_Text_Field__c</fullName>
        <inlineHelpText>What are your short term / long-term goals with Testing?</inlineHelpText>
        <label>Short/ Long Term goals with Testing?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>average_time_taken_per_data_load__c</fullName>
        <label>average time taken per data load?</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>what_s_the_average_time_per_process__c</fullName>
        <inlineHelpText>what’s the average time per process?</inlineHelpText>
        <label>what’s the average time per process?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Demo Questionnaire</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Company_Name__c</columns>
        <columns>Lead__c</columns>
        <columns>Hours_of_effort__c</columns>
        <columns>Challenges__c</columns>
        <columns>No_of_Sanbox_in_Release__c</columns>
        <columns>ALM_Tools__c</columns>
        <columns>Current_Version_Control_Tool_If_Exists__c</columns>
        <columns>Data_Loader_Capabilities__c</columns>
        <columns>Deployment_User__c</columns>
        <columns>Long_Term_Goals__c</columns>
        <columns>Release_Duration__c</columns>
        <columns>Short_Term_Goals_with_current_RLM__c</columns>
        <columns>Text_Automation_Details__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Completed_Questionnaires_Last_30_days</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Company_Name__c</columns>
        <columns>Contact__c</columns>
        <columns>Email__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>RECORDTYPE</columns>
        <columns>OBJECT_ID</columns>
        <columns>Lead__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>10/1/2018 12:00 AM</value>
        </filters>
        <label>Completed Questionnaires - Q4 2018</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Quest{0}</displayFormat>
        <label>IQ- Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demo Questionnaires</pluralLabel>
    <recordTypes>
        <fullName>Lead_Questionnaire</fullName>
        <active>true</active>
        <label>Lead Questionnaire</label>
    </recordTypes>
    <recordTypes>
        <fullName>Opportunity_Questionnaire</fullName>
        <active>true</active>
        <label>Opportunity Questionnaire</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ALM_Tool_Other_Validation_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
     ISPICKVAL( X2_Which_tool_is_used_for_Project_Manage__c , &quot;Other&quot;),
     ISBLANK( Plz_specify_other_ALM__c  )
)</errorConditionFormula>
        <errorDisplayField>Plz_specify_other_ALM__c</errorDisplayField>
        <errorMessage>Please specify other (ALM)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Any_ETL_tool_currently_being_used</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( X1_Any_ETL_tool_currently_being_used__c )</errorConditionFormula>
        <errorDisplayField>X1_Any_ETL_tool_currently_being_used__c</errorDisplayField>
        <errorMessage>Please enter Any ETL Tool currently being used</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Company_Name</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Company_Name__c )</errorConditionFormula>
        <errorDisplayField>Company_Name__c</errorDisplayField>
        <errorMessage>Please Enter Company Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Email</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Email__c)</errorConditionFormula>
        <errorDisplayField>Email__c</errorDisplayField>
        <errorMessage>Please Enter Email</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>How_are_metadata_components_are_deployed</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(How_are_metadata_components_being_dep__c,&apos;&apos;)</errorConditionFormula>
        <errorDisplayField>How_are_metadata_components_being_dep__c</errorDisplayField>
        <errorMessage>Please select how metadata components being deployed currently</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>How_often_do_you_do_data_loading</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( How_often_Data_Loader__c )</errorConditionFormula>
        <errorDisplayField>How_often_Data_Loader__c</errorDisplayField>
        <errorMessage>Please enter how often do you do data loading</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>How_often_do_you_encounter_errors</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( How_Often__c )</errorConditionFormula>
        <errorDisplayField>How_Often__c</errorDisplayField>
        <errorMessage>Please Enter encounter errors?</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_records_do_you_migrate_per_data_load</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Typically_how_many_records_do_you_mi__c )</errorConditionFormula>
        <errorDisplayField>Typically_how_many_records_do_you_mi__c</errorDisplayField>
        <errorMessage>Please enter No.of records do you migrate per data load</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pain_point_during_Deployment_process</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(What_are_the_pain_points_during_the_d__c)</errorConditionFormula>
        <errorDisplayField>What_are_the_pain_points_during_the_d__c</errorDisplayField>
        <errorMessage>Please Enter Pain point during Deployment process</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Select_use_cases_evaluate_VC</fullName>
        <active>true</active>
        <errorConditionFormula>INCLUDES(Select_use_VC__c, &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Select_use_VC__c</errorDisplayField>
        <errorMessage>Please select use cases that you’d like to evaluate</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Select_use_cases_to_evaluate_Deployment</fullName>
        <active>true</active>
        <errorConditionFormula>INCLUDES( Select_use_cases_for_Deployment__c ,&apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Select_use_cases_for_Deployment__c</errorDisplayField>
        <errorMessage>Please select use cases to evaluate Deployment</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Time_for_pre_post_deployment_steps</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( How_long_does_it_take_for_pre_post_de__c )</errorConditionFormula>
        <errorMessage>Please enter Time for pre/post deployment steps</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Time_taken_for_production_deployment</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Time_taken_for__c )</errorConditionFormula>
        <errorDisplayField>Time_taken_for__c</errorDisplayField>
        <errorMessage>Please enter Time taken for production deployment</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Version_Control_Validation_Rule_for_Othe</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
     ISPICKVAL( X1_Which_Version_Control_System_is_used__c , &quot;Other&quot;),
     ISBLANK(  Name_of_other_System__c  )
)</errorConditionFormula>
        <errorDisplayField>Name_of_other_System__c</errorDisplayField>
        <errorMessage>Others is mandatory if none is selected above</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>What_does_your_current_release_process</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( What_does_your_current_release_process__c )</errorConditionFormula>
        <errorDisplayField>What_does_your_current_release_process__c</errorDisplayField>
        <errorMessage>Please enter what does your current release process</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>What_kind_of_testing_do_you_perform</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( What_kind_of_testing_do_you_perform__c , &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>What_kind_of_testing_do_you_perform__c</errorDisplayField>
        <errorMessage>Please enter what kind of testing do you perform</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Which_tool_is_used_for_ALM</fullName>
        <active>true</active>
        <description>Validate Which tool is used for ALM ?  is not NULL</description>
        <errorConditionFormula>ISPICKVAL( X2_Which_tool_is_used_for_Project_Manage__c , &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>X2_Which_tool_is_used_for_Project_Manage__c</errorDisplayField>
        <errorMessage>Please select which tool is used for Project Management (ALM)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>specify_other_Metadata_components</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL(  How_are_metadata_components_being_dep__c , &quot;Other&quot;),
ISBLANK(Plz_specify_other_Metadata_components__c)
)</errorConditionFormula>
        <errorDisplayField>Plz_specify_other_Metadata_components__c</errorDisplayField>
        <errorMessage>Please enter other Deployment type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>which_Version_Control_System_is_used</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(X1_Which_Version_Control_System_is_used__c  , &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>X1_Which_Version_Control_System_is_used__c</errorDisplayField>
        <errorMessage>Please select which Version Control System is used</errorMessage>
    </validationRules>
</CustomObject>